--- a/views/pages/news.ejs
+++ b/views/pages/news.ejs
@@ -1,14 +1,25 @@
+
+
+<head>
+  <link rel="stylesheet" href="materialize.css">
+</head>
 <% include ../partials/navbar %>
-  <body>
+
+
+<body>
     <div class="container">
         <div class="row justify-content-md-center">
       <h1>The Targum Stew</h1>
       <p>Where you see the latest news at Rutgers, provided by the Daily Targum.</p>
     </div>
+    <div class="row">
+    <div class="col">
       <div id="articles"></div>
       <div class="container card-group"></div>
-      <div id="notes"></div>
+      <!-- <div id="notes"></div> -->
     </div>
+  </div>
+  </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
   </body>
