--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -20,7 +20,7 @@
         <a href="/" class="brand-logo">Targum Stew</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a class="navLink" href="/news">News</a></li>
+          <li><a class="navLink" href="/news">News</a></li> <li><a class="navLink" href="/scrape">Scrape</a></li>
           <li><a class="navLink" href="/favorites">Favorites</a></li>
 
         </ul>
