--- a/views/pages/news.ejs
+++ b/views/pages/news.ejs
@@ -9,15 +9,20 @@
 <body>
     <div class="container">
         <div class="row justify-content-md-center">
-      <h1>The Targum Stew</h1>
-      <p>Where you see the latest news at Rutgers, provided by the Daily Targum.</p>
+              <h1>The Newest Scholarships</h1>
+          </div>
+<div class="row justify-content-md-center">
+      <p>You should definitely apply because it is basically free money awaiting to be given out.</p>
     </div>
+    </div>
+    <div class="container">
     <div class="row">
     <div class="col">
       <div id="articles"></div>
       <div class="container card-group"></div>
       <!-- <div id="notes"></div> -->
     </div>
+  </div>
   </div>
   </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
