--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -28,10 +28,19 @@
     </nav>
   
     <ul class="sidenav" id="mobile-demo">
-      <li><a href="sass.html">News</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">Javascript</a></li>
-      <li><a href="mobile.html">Mobile</a></li>
+      <li><a href="/">News</a></li>
+      <li><a href="/scrape">Scrape</a></li>
+      <li><a href="/favorites">Favorites</a></li>
     </ul>
 
+    <script>
+       var elem = document.querySelector('.sidenav');
+  var instance = new M.Sidenav(elem);
+
+   // with jquery
+
+  $(document).ready(function(){
+   $('.sidenav').sidenav();
+  });
+    </script>
   </body>
